--- a/package.json
+++ b/package.json
@@ -10,27 +10,38 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.12",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@uploadthing/react": "^6.7.2",
+    "add": "^2.0.6",
     "axios": "^1.7.3",
     "chess.js": "1.0.0-beta.8",
     "chessboardjsx": "^2.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dlx": "^0.2.1",
+    "input": "^1.0.1",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "pnpm": "^9.7.1",
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
+    "shadcn-ui": "^0.8.0",
     "socket.io-client": "^4.7.5",
     "stripe": "^16.7.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
+    "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
