--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@uploadthing/react": "^6.7.2",
     "add": "^2.0.6",
@@ -34,12 +35,14 @@
     "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
     "shadcn-ui": "^0.8.0",
     "socket.io-client": "^4.7.5",
     "stripe": "^16.7.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^1.0.38",
     "uploadthing": "^6.13.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
