--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dlx": "^0.2.1",
+    "framer-motion": "^11.3.28",
     "input": "^1.0.1",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
